added performance tests vs Hapi